Commends and small code cleanup