@@ -1,40 +1,40 @@
-/**
- * The Cart class represents a shopping cart containing a list of items.
-* The items in the cart can be added, removed, calculated the total price, and checked out.
-*/
+import java.util.ArrayList;
+import java.util.List;
 
-class Cart {
+/**
+ * The Cart class contains a list of CartItem used at checkout
+ */
+public class Cart {
     private List<CartItem> items;
 
     /**
-     * Creates a new Cart with an empty items list.
-*/
+     * Constructs an empty shopping cart.
+     */
     public Cart() {
         items = new ArrayList<>();
     }
 
     /**
-     * Adds a new CartItem to the cart with the given product and quantity.
-* @param product The product to be added
-* @param quantity The quantity of the product to be added
-*/
+     * Adds a product with a specific quantity to the cart.
+     * @param product
+     * @param quantity
+     */
     public void add(Product product, double quantity) {
         items.add(new CartItem(product, quantity));
     }
 
     /**
-     * Removes and returns the last CartItem from the cart.
-* @return The last CartItem removed from the cart.
-*/
-    public CartItem removeLast() {
-        return items.removeLast();
+     * Removes and returns the last item added to the cart.
+     * @return The last CartItem added to the cart.
+     */
+    public CartItem removeLast(){
+        return items.remove(items.size() - 1);
     }
 
     /**
-     * Returns the total price of all items in the cart.
-* @return The total price of all items in the cart.
-*/
-    public double getTotal() {
+     * @return The total cost of the items in the cart.
+     */
+    public double getTotal(){
         double total = 0;
         for (CartItem item : items) {
             total += item.getPrice() + item.getTax();
@@ -43,13 +43,15 @@ class Cart {
     }
 
     /**
-     * Checkouts the cart and generates a receipt.
-* @param cash The amount of cash used for checkout
-*/
+     * Prints the receipt, and saves it to a file and returns the change values.
+     * @param cash The amount of cash provided by the customer.
+     */
     public void checkout(double cash) {
         Receipt r = new Receipt((ArrayList<CartItem>)items);
-        System.out.println("Here is your receipt!\n" + r.getReceipt(cash));
+        System.out.println(r.toString());
         r.toFile("transactions/");
-    }
-}
 
+        System.out.printf("Change: %s\n", Change.getChangeString(getTotal(), cash));
+    }
+
+}
